# python_for_data_science

./: .gitignore  README.md  requirements.txt
Python_0_Starting/: README.md
Python_0_Starting/ex00/: Hello.py
Python_0_Starting/ex05/: README.md  building.py
Python_0_Starting/ex06/: filterstring.py  ft_filter.py
Python_0_Starting/ex07/: sos.py
Python_0_Starting/ex09/: README.md
Python_1_Array/: README.md
Python_1_Array/ex00/: give_bmi.py
Python_1_Array/ex01/: array2D.py
Python_1_Array/ex02/: load_image.py
Python_1_Array/ex03/: zoom.py
Python_1_Array/ex04/: load_image.py  rotate.py
Python_1_Array/ex05/: pimp_image.py
Python_2_DataTable/: README.md
Python_2_DataTable/ex00/: tester.py
Python_2_DataTable/ex01/: aff_life.py  load_csv.py
Python_2_DataTable/ex02/: aff_pop.py  load_csv.py
Python_2_DataTable/ex03/: projection_life.py
Python_2_DataTable/material/ft_package/: README.md  pyproject.toml  requirements.txt
Python_2_DataTable/material/ft_package/src/ft_package/: __init__.py  load_csv.py  load_image.py  text_handling.py
Python_2_DataTable/material/ft_package/tests/: main.py
Python_3_OOP/: README.md
Python_3_OOP/ex00/: S1E9.py  tester.py
Python_3_OOP/ex01/: S1E9.py  tester.py
Python_3_OOP/ex02/: DiamondTrap.py  S1E7.py  tester.py
Python_3_OOP/ex03/: ft_calculator.py
Python_3_OOP/ex04/: ft_calculator.py  tester.py
Python_4_Dod/: README.md
Python_4_Dod/ex00/: statistics.py  tester.py
Python_4_Dod/ex01/: in_out.py  tester.py
Python_4_Dod/ex02/: callLimit.py  tester.py
python_0/: README.md
python_0/ex00/: Hello.py
(+36 files in other folders)
